crates/spicy_parser/src/snapshots/spicy_parser__lower__tests__lower-diode_basic.snap
---
source: crates/spicy_parser/src/lower.rs
assertion_line: 746
expression: lowered
---
Lowered {
    circuit: Circuit {
        node_count: 3,
        resistors: [],
        capacitors: [],
        inductors: [],
        diodes: [
            Diode {
                positive: NodeId(
                    1,
                ),
                negative: NodeId(
                    2,
                ),
                model: DiodeModelId(
                    0,
                ),
            },
        ],
        bjts: [],
        vsources: [],
        isources: [],
    },
    params: Params {
        resistor_models: [],
        resistors: [],
        capacitor_models: [],
        capacitors: [],
        inductor_models: [],
        inductors: [],
        diode_models: [
            DiodeModel {
                is: 1e-14,
                n: 1.0,
                rs: 2.0,
            },
        ],
        diodes: [
            DiodeParams {
                area: 2.0,
                m: 3.0,
                pj: 4.0,
                lm: 1.0,
                wm: 2.0,
                lp: 3.0,
                wp: 4.0,
                off: true,
                ic: 0.7,
                temperature: Fixed(
                    298.15,
                ),
            },
        ],
        bjt_models: [],
        bjts: [],
        vsources: [],
        isources: [],
    },
    names: CircuitNames {
        title: "basic diode",
        nodes: [
            "0",
            "in",
            "out",
        ],
        resistors: [],
        capacitors: [],
        inductors: [],
        diodes: [
            "D1",
        ],
        bjts: [],
        vsources: [],
        isources: [],
        diode_models: [
            "Dmod",
        ],
        bjt_models: [],
    },
    analyses: [],
}
